# pybalt

./: .gitignore  README.md  install.bat  local-guide.md  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: build.yml  publish.yml
pybalt/: __init__.py  __main__.py  cobalt.py
pybalt/core/: __init__.py  client.py  cobalt.py  config.py  constants.py  exceptions.py  local.py  logging_utils.py  misc.py  remux.py  wrapper.py
pybalt/locales/: ru.txt
pybalt/misc/: api.py  tracker.py
tests/: backwards_compatibility_test.py  download_test.py
